Update openapi and implement controller and Service for OrderItem
